--- a/develop/blocks/lines/lines.scss
+++ b/develop/blocks/lines/lines.scss
@@ -132,8 +132,7 @@
 
         &.account {
             .line {
-                width: 280px;
-                left: 280px;
+                display: none;
             }
         }
 
