--- a/develop/blocks/monitoring-table/monitoring-table.pug
+++ b/develop/blocks/monitoring-table/monitoring-table.pug
@@ -5,78 +5,78 @@ mixin monitoring-table()
                 thead
                     tr
                         td Период
-                      
+
                         td Инвестиции<br> и выплаты
                         td Доходность<br> за все время<br> % годовых,
                         td за период/<br>12 месяцев
                 tbody
                     tr
-                        td 
+                        td
                             span 07.20
                             a(download href='#') Отчет
                                 +icon('d-arrow')
-                        td 
-                            span 6 006 122.46 ₽ 
-                            span 100 460.56 ₽ 
+                        td
+                            span 6 006 122.46 ₽
+                            span 100 460.56 ₽
                         td 9.84%
                         td
                             span 12.10%
                             span 28.10%
                     tr
-                        td 
+                        td
                             span 08.20
                             a(download href='#') Отчет
                                 +icon('d-arrow')
-                        td 
-                            span 5 671 676.13 ₽ 
+                        td
+                            span 5 671 676.13 ₽
                             span 670 536.51 ₽
                         td 10.84%
                         td
                             span 25.40%
                             span 12.67%
                     tr
-                        td 
+                        td
                             span 07.20
                             a(download href='#') Отчет
                                 +icon('d-arrow')
-                        td 
-                            span 6 006 122.46 ₽ 
-                            span 100 460.56 ₽ 
+                        td
+                            span 6 006 122.46 ₽
+                            span 100 460.56 ₽
                         td 9.84%
                         td
                             span 12.10%
                             span 28.10%
                     tr
-                        td 
+                        td
                             span 08.20
                             a(download href='#') Отчет
                                 +icon('d-arrow')
-                        td 
-                            span 5 671 676.13 ₽ 
+                        td
+                            span 5 671 676.13 ₽
                             span 670 536.51 ₽
                         td 10.84%
                         td
                             span 25.40%
                             span 12.67%
                     tr
-                        td 
+                        td
                             span 07.20
                             a(download href='#') Отчет
                                 +icon('d-arrow')
-                        td 
-                            span 6 006 122.46 ₽ 
-                            span 100 460.56 ₽ 
+                        td
+                            span 6 006 122.46 ₽
+                            span 100 460.56 ₽
                         td 9.84%
                         td
                             span 12.10%
                             span 28.10%
                     tr
-                        td 
+                        td
                             span 08.20
                             a(download href='#') Отчет
                                 +icon('d-arrow')
-                        td 
-                            span 5 671 676.13 ₽ 
+                        td
+                            span 5 671 676.13 ₽
                             span 670 536.51 ₽
                         td 10.84%
                         td
@@ -87,17 +87,17 @@ mixin monitoring-table()
                 thead
                     tr
                         td Период
-                        td Инвестиции
-                        td Выплаты
-                        td Доходность <br>за период, <br>% годовых
-                        td Доходность<br>12 месяцев,<br>% годовых
-                        td Доходность<br>все время,<br>% годовых
-                        td Отчет
+                        td(class='right') Инвестиции
+                        td(class='right') Выплаты
+                        td(class='right') Доходность <br>за период, <br>% годовых
+                        td(class='right') Доходность<br>12 месяцев,<br>% годовых
+                        td(class='right') Доходность<br>все время,<br>% годовых
+                        td(class='center') Отчет
                 tbody
                     tr
                         td 07.20
-                        td(class='right') 6 006 122.46 ₽ 
-                        td(class='right') 100 460.56 ₽ 
+                        td(class='right') 6 006 122.46 ₽
+                        td(class='right') 100 460.56 ₽
                         td(class='right') 9.84%
                         td(class='right') 28.10%
                         td(class='right') 28.10%
@@ -106,8 +106,8 @@ mixin monitoring-table()
                                 +icon('d-arrow')
                     tr
                         td 08.20
-                        td(class='right') 1 006 122.46 ₽ 
-                        td(class='right') 40 460.56 ₽ 
+                        td(class='right') 1 006 122.46 ₽
+                        td(class='right') 40 460.56 ₽
                         td(class='right') 19.84%
                         td(class='right') 28.10%
                         td(class='right') 28.10%
@@ -116,8 +116,8 @@ mixin monitoring-table()
                                 +icon('d-arrow')
                     tr
                         td 07.20
-                        td(class='right') 6 006 122.46 ₽ 
-                        td(class='right') 100 460.56 ₽ 
+                        td(class='right') 6 006 122.46 ₽
+                        td(class='right') 100 460.56 ₽
                         td(class='right') 9.84%
                         td(class='right') 28.10%
                         td(class='right') 28.10%
@@ -125,8 +125,8 @@ mixin monitoring-table()
                             | -
                     tr
                         td 08.20
-                        td(class='right') 1 006 122.46 ₽ 
-                        td(class='right') 40 460.56 ₽ 
+                        td(class='right') 1 006 122.46 ₽
+                        td(class='right') 40 460.56 ₽
                         td(class='right') 19.84%
                         td(class='right') 28.10%
                         td(class='right') 28.10%
@@ -135,8 +135,8 @@ mixin monitoring-table()
                                 +icon('d-arrow')
                     tr
                         td 07.20
-                        td(class='right') 6 006 122.46 ₽ 
-                        td(class='right') 100 460.56 ₽ 
+                        td(class='right') 6 006 122.46 ₽
+                        td(class='right') 100 460.56 ₽
                         td(class='right') 9.84%
                         td(class='right') 28.10%
                         td(class='right') 28.10%
@@ -144,8 +144,8 @@ mixin monitoring-table()
                             | -
                     tr
                         td 08.20
-                        td(class='right') 1 006 122.46 ₽ 
-                        td(class='right') 40 460.56 ₽ 
+                        td(class='right') 1 006 122.46 ₽
+                        td(class='right') 40 460.56 ₽
                         td(class='right') 19.84%
                         td(class='right') 28.10%
                         td(class='right') 28.10%
