--- a/develop/blocks/monitoring-data/monitoring-data.scss
+++ b/develop/blocks/monitoring-data/monitoring-data.scss
@@ -234,11 +234,21 @@
 @media #{$laptop} {
     .monitoring-data {
         &__header {
-            padding: 0 24px;
+            padding: 0 24px 24px;
         }
 
         &__title {
             font-size: 18px;
+        }
+
+        &__link {
+            font-size: 18px;
+            padding-right: 16px;
+
+            svg {
+                width: 11px;
+                height: 13px;
+            }
         }
 
         &__toggles {
@@ -271,6 +281,49 @@
 
         &__data-col {
             padding-right: 32px;
+        }
+    }
+}
+
+@media #{$desktop} {
+    .monitoring-data {
+        &__data-list {
+            display: block;
+        }
+
+        &__data-col {
+            padding: 18px 0;
+            width: 100%;
+            max-width: none;
+            display: flex;
+            margin-top: -1px;
+
+            border-top: 1px solid #e7e7e7;
+            border-bottom: 1px solid #e7e7e7;
+
+            &:first-child {
+                margin-top: 0;
+            }
+        }
+
+        &__data-block {
+            width: 25%;
+            margin-bottom: 0;
+            padding-right: 8px;
+
+            &--full {
+                width: 100%;
+                padding: 0;
+            }
+        }
+
+        &__data-row {
+            display: flex;
+
+            .monitoring-data__data-value {
+                width: 25%;
+                padding-right: 8px;
+            }
         }
     }
 }
