--- a/develop/blocks/monitoring-steps/monitoring-steps.scss
+++ b/develop/blocks/monitoring-steps/monitoring-steps.scss
@@ -43,9 +43,13 @@
     }
 
     &__card {
-        width: 96px;
-        min-height: 132px;
-        padding: 12px 10px 6px 10px;
+        // width: 96px;
+        // min-height: 132px;
+        // padding: 12px 10px 6px 10px;
+        width: 146px;
+        min-height: 152px;
+        padding: 12px 32px 6px 32px;
+        margin-left: -24px;
         flex: 0 0 auto;
         display: flex;
         flex-flow: column nowrap;
@@ -58,6 +62,8 @@
         font-size: 10px;
         line-height: 1.4;
 
+        clip-path: polygon(80% 0%, 100% 50%, 80% 100%, 0% 100%, 20% 50%, 0% 0%);
+
         &--current {
             background-color: #fff6d4;
         }
@@ -66,8 +72,15 @@
             opacity: 0.3;
         }
 
+        &:first-child {
+            margin-left: 0;
+            clip-path: polygon(80% 0%, 100% 50%, 80% 100%, 0% 100%, 0 50%, 0% 0%);
+        }
+
         &:last-child {
             margin-right: 0;
+
+            clip-path: polygon(100% 0, 100% 50%, 100% 100%, 0% 100%, 20% 50%, 0% 0%);
         }
     }
 
@@ -91,7 +104,9 @@
 @media #{$laptop} {
     .monitoring-steps {
         &__title {
-            padding-left: 36px;
+            padding-left: 24px;
+            font-size: 16px;
+            font-weight: 500;
         }
     }
 }
