--- a/develop/blocks/monitoring-table/monitoring-table.pug
+++ b/develop/blocks/monitoring-table/monitoring-table.pug
@@ -6,20 +6,20 @@ mixin monitoring-table()
                     tr
                         td Период
 
-                        td Инвестиции<br> и выплаты
-                        td Доходность<br> за все время<br> % годовых,
-                        td за период/<br>12 месяцев
+                        td(class='right') Инвестиции<br> и выплаты
+                        td(class='right') Доходность<br> за все время<br> % годовых,
+                        td(class='right') за период/<br>12 месяцев
                 tbody
                     tr
                         td
                             span 07.20
                             a(download href='#') Отчет
                                 +icon('d-arrow')
-                        td
+                        td(class='right')
                             span 6 006 122.46 ₽
                             span 100 460.56 ₽
-                        td 9.84%
-                        td
+                        td(class='right') 9.84%
+                        td(class='right')
                             span 12.10%
                             span 28.10%
                     tr
@@ -27,11 +27,11 @@ mixin monitoring-table()
                             span 08.20
                             a(download href='#') Отчет
                                 +icon('d-arrow')
-                        td
+                        td(class='right')
                             span 5 671 676.13 ₽
                             span 670 536.51 ₽
-                        td 10.84%
-                        td
+                        td(class='right') 10.84%
+                        td(class='right')
                             span 25.40%
                             span 12.67%
                     tr
@@ -39,11 +39,11 @@ mixin monitoring-table()
                             span 07.20
                             a(download href='#') Отчет
                                 +icon('d-arrow')
-                        td
+                        td(class='right')
                             span 6 006 122.46 ₽
                             span 100 460.56 ₽
-                        td 9.84%
-                        td
+                        td(class='right') 9.84%
+                        td(class='right')
                             span 12.10%
                             span 28.10%
                     tr
@@ -51,11 +51,11 @@ mixin monitoring-table()
                             span 08.20
                             a(download href='#') Отчет
                                 +icon('d-arrow')
-                        td
+                        td(class='right')
                             span 5 671 676.13 ₽
                             span 670 536.51 ₽
-                        td 10.84%
-                        td
+                        td(class='right') 10.84%
+                        td(class='right')
                             span 25.40%
                             span 12.67%
                     tr
@@ -63,11 +63,11 @@ mixin monitoring-table()
                             span 07.20
                             a(download href='#') Отчет
                                 +icon('d-arrow')
-                        td
+                        td(class='right')
                             span 6 006 122.46 ₽
                             span 100 460.56 ₽
-                        td 9.84%
-                        td
+                        td(class='right') 9.84%
+                        td(class='right')
                             span 12.10%
                             span 28.10%
                     tr
@@ -75,11 +75,11 @@ mixin monitoring-table()
                             span 08.20
                             a(download href='#') Отчет
                                 +icon('d-arrow')
-                        td
+                        td(class='right')
                             span 5 671 676.13 ₽
                             span 670 536.51 ₽
-                        td 10.84%
-                        td
+                        td(class='right') 10.84%
+                        td(class='right')
                             span 25.40%
                             span 12.67%
         +e.desktop
