--- a/develop/blocks/best-object-card/best-object-card.scss
+++ b/develop/blocks/best-object-card/best-object-card.scss
@@ -4,6 +4,8 @@
     height: 500px;
     padding: 24px;
 
+    will-change: transform, opacity;
+
     &__image {
         position: absolute;
         width: 100%;
