--- a/develop/blocks/object-calc/object-calc.scss
+++ b/develop/blocks/object-calc/object-calc.scss
@@ -50,6 +50,7 @@
 
     &__income-result {
         position: relative;
+        z-index: 1;
         width: 100%;
         padding: 20px;
         min-height: 405px;
