tiny fix update

--- a/develop/blocks/account-nav/account-nav.pug
+++ b/develop/blocks/account-nav/account-nav.pug
@@ -11,4 +11,14 @@ mixin account-nav()
                 +e.A.link.active(href='#') Реквизиты
             +e.LI.item
                 +e.A.link.--notify(href='#') Рекомендовать друга
+            +e.LI.item
+                +e.A.link(href='#') Мониторинг
+            +e.LI.item
+                +e.A.link.--notify(href='#') Документы
+            +e.LI.item
+                +e.A.link(href='#') Новости
+            +e.LI.item
+                +e.A.link.active(href='#') Реквизиты
+            +e.LI.item
+                +e.A.link.--notify(href='#') Рекомендовать друга
 
