--- a/develop/blocks/monitoring-data/monitoring-data.scss
+++ b/develop/blocks/monitoring-data/monitoring-data.scss
@@ -324,7 +324,14 @@
             border-bottom: 1px solid #e7e7e7;
 
             &:first-child {
-                margin-top: 0;
+                display: flex;
+                margin: 0;
+
+                .monitoring-data__data-block {
+                    width: 25%;
+                    margin-bottom: 0;
+                    padding-right: 8px;
+                }
             }
         }
 
