--- a/app/css/main.css
+++ b/app/css/main.css
@@ -7172,7 +7172,15 @@ th {
     border-top: 1px solid #e7e7e7;
     border-bottom: 1px solid #e7e7e7; }
     .monitoring-data__data-col:first-child {
-      margin-top: 0; }
+      display: -webkit-box;
+      display: -moz-box;
+      display: -ms-flexbox;
+      display: flex;
+      margin: 0; }
+      .monitoring-data__data-col:first-child .monitoring-data__data-block {
+        width: 25%;
+        margin-bottom: 0;
+        padding-right: 8px; }
   .monitoring-data__data-block {
     width: 25%;
     margin-bottom: 0;
