--- a/develop/blocks/object/object.pug
+++ b/develop/blocks/object/object.pug
@@ -16,10 +16,10 @@ mixin object()
                             +e.LI.navigation-item
                                 +e.A.navigation-link(href='#' data-scroll-to='objectLocation') Расположение
                             +e.LI.navigation-item
-                                +e.A.navigation-link.locked(href='#') Финансы
+                                +e.A.navigation-link.locked(href='#' data-tippy-content="Информация доступна только для зарегистрированных пользователей. Нажмите, чтобы зарегистрироваться или авторизоваться") Финансы
                                     +icon('lock')
                             +e.LI.navigation-item
-                                +e.A.navigation-link.locked(href='#') Рассчитать доход
+                                +e.A.navigation-link.locked(href='#' data-tippy-content="Информация доступна только для зарегистрированных пользователей. Нажмите, чтобы зарегистрироваться или авторизоваться") Рассчитать<br> доход
                                     +icon('lock')
                 +e.section.--top
                     +object-slider
