--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1904,6 +1904,8 @@ th {
       padding-left: 20px;
       padding-bottom: 2px;
       margin-bottom: -2px; }
+    .account-nav__list .slick-slide {
+      outline: none; }
   .account-nav__link {
     display: block;
     position: relative;
@@ -1912,6 +1914,7 @@ th {
     white-space: nowrap;
     color: #000;
     text-decoration: none;
+    outline: none;
     -webkit-transition: color 300ms ease;
     -moz-transition: color 300ms ease;
     transition: color 300ms ease; }
@@ -8038,7 +8041,8 @@ th {
   z-index: 11; }
   .object-card__progress {
     width: 100%;
-    height: 20px; }
+    height: 20px;
+    background-color: #fff; }
   .object-card__header {
     position: relative;
     width: 100%; }
@@ -8926,7 +8930,6 @@ th {
       top: 0;
       fill: #fed63f; }
   .object-new__section {
-    padding: 0 1px;
     margin-bottom: 35px; }
     .object-new__section--top {
       margin-bottom: 20px; }
@@ -9043,7 +9046,7 @@ th {
     top: 0;
     left: 0;
     height: 100%;
-    background-color: rgba(254, 214, 63, 0.8); }
+    background-color: #fed63f; }
   .object-progress__label {
     position: absolute;
     padding: 0 5px;
@@ -9273,6 +9276,7 @@ th {
     .object__navigation-item:last-child {
       margin-bottom: 0; }
   .object__navigation-link {
+    display: inline-block;
     position: relative;
     padding: 3px 0;
     font-size: 20px;
@@ -9305,14 +9309,9 @@ th {
       width: 16px;
       height: 16px;
       right: -20px;
-      top: 50%;
-      -webkit-transform: translateY(-50%);
-         -moz-transform: translateY(-50%);
-          -ms-transform: translateY(-50%);
-              transform: translateY(-50%);
+      top: 9px;
       fill: #fed63f; }
   .object__section {
-    padding: 0 1px;
     margin-bottom: 35px; }
     .object__section--top {
       -webkit-box-ordinal-group: 0;
