--- a/develop/blocks/account-nav/account-nav.scss
+++ b/develop/blocks/account-nav/account-nav.scss
@@ -21,6 +21,10 @@
             padding-bottom: 2px;
             margin-bottom: -2px;
         }
+
+        .slick-slide {
+            outline: none;
+        }
     }
 
     &__link {
@@ -32,6 +36,7 @@
         white-space: nowrap;
         color: $text-color;
         text-decoration: none;
+        outline: none;
 
         transition: color 300ms ease;
 
