--- a/develop/blocks/object-progress/object-progress.scss
+++ b/develop/blocks/object-progress/object-progress.scss
@@ -11,7 +11,7 @@
         left: 0;
         height: 100%;
 
-        background-color: rgba($theme-color, 0.8);
+        background-color: $theme-color;
     }
 
     &__label {
