--- a/develop/blocks/object-slider/object-slider.scss
+++ b/develop/blocks/object-slider/object-slider.scss
@@ -141,7 +141,7 @@
         margin-left: 9px;
 
         border-width: 18px 0 18px 36px;
-        border-color: #fed63f;
+        border-color: $theme-color;
         border-style: solid;
         border-top-color: transparent;
         border-bottom-color: transparent;
